--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ bevy = { version = "0.15.1" }
 enum-map = "2.7.3"
 itertools = "0.14.0"
 map-range = "0.1.2"
+strum = { version = "0.26.3", features = ["derive"] }
 
 # [profile.dev]
 # opt-level = 1
